[gd_scene load_steps=2 format=3 uid="uid://bcs03rbqbtfro"]

[ext_resource type="Script" path="res://enemies/scripts/spawner.gd" id="1_y564s"]

[node name="spawner" type="Node2D"]
script = ExtResource("1_y564s")

[node name="spawner_timer" type="Timer" parent="."]
autostart = true

[node name="speed_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="TutorialTimer" type="Timer" parent="."]
wait_time = 40.0
one_shot = true
autostart = true

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="spawner_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="speed_timer" to="." method="_on_speed_timer_timeout"]
[connection signal="timeout" from="TutorialTimer" to="." method="_on_tutorial_timer_timeout"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_boost_timer_timeout"]
